service-provider模块定义module name

--- a/service-provider/src/main/resources/sofa-module.properties
+++ b/service-provider/src/main/resources/sofa-module.properties
@@ -1,4 +1,1 @@
-# Application Name
-spring.application.name=SOFABoot Demo
-# logging path
-logging.path=./logs
+Module-Name=com.example.service-provider
