--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.alipay.sofa</groupId>
         <artifactId>sofaboot-dependencies</artifactId>
-        <version>2.5.1</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <modules>
@@ -22,6 +22,7 @@
         <module>service-provider</module>
         <module>service-consumer</module>
         <module>sofa-boot-run</module>
+        <module>dal</module>
     </modules>
 
     <properties>
@@ -45,6 +46,11 @@
             <dependency>
                 <groupId>com.example</groupId>
                 <artifactId>service-consumer</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.example</groupId>
+                <artifactId>dal</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
         </dependencies>
