--- a/sofa-boot-run/pom.xml
+++ b/sofa-boot-run/pom.xml
@@ -11,11 +11,30 @@
 
     <artifactId>sofa-boot-run</artifactId>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+        <shiro-spring.version>1.4.0</shiro-spring.version>
+        <oltu.oauth2.version>1.0.2</oltu.oauth2.version>
+        <mybatis-plus.version>2.1.9</mybatis-plus.version>
+        <!--datasource -->
+        <aspectj.version>1.9.1</aspectj.version>
+        <mysql-connector-java.version>8.0.8-dmr</mysql-connector-java.version>
+        <!--common -->
+        <commons-collections.version>3.2.2</commons-collections.version>
+        <fastjson.version>1.2.49</fastjson.version>
+        <jackson.version>2.9.6</jackson.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
+        <guava.version>26.0-jre</guava.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+        <oval.version>1.90</oval.version>
+        <okhttp.version>3.11.0</okhttp.version>
+        <dozer.version>5.5.1</dozer.version>
+        <dozer-jdk8-support.version>1.0.3</dozer-jdk8-support.version>
+    </properties>
+
     <dependencies>
-        <dependency>
-            <groupId>com.alipay.sofa</groupId>
-            <artifactId>isle-sofa-boot-starter</artifactId>
-        </dependency>
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>service-provider</artifactId>
@@ -25,9 +44,24 @@
             <artifactId>service-consumer</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.example</groupId>
+            <artifactId>dal</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>isle-sofa-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alipay.sofa</groupId>
+            <artifactId>healthcheck-sofa-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -44,5 +78,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
